add short page query
